objects/copado__Data_Set__c.object
<CustomObject>
    <description>Stores a set of file attachments with record data from a Data Template.</description>
    <fields>
        <fullName>copado__Data_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Data Template record that defines related objects and their relationships for the attachments of this Data Set.</description>
        <inlineHelpText>The selected Data Template will be used as a base for object relationships, related fields and filtering.</inlineHelpText>
        <label>Data Template</label>
        <referenceTo>copado__Data_Template__c</referenceTo>
        <relationshipLabel>Data Sets</relationshipLabel>
        <relationshipName>Data_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <description>Brief description of what data contains this Data Set.</description>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Job</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Data Sets</relationshipLabel>
        <relationshipName>Data_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Status__c</fullName>
        <formula>TEXT(copado__Execution_Job__r.copado__Status__c)</formula>
        <label>File Execution Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Generated_Date__c</fullName>
        <description>Date and time of the last time the data set was generated (i.e. attached files were updated).</description>
        <inlineHelpText>This date is automatically updated by Copado when generating the data set CSV files from a source environment. Update this value when generating the CSV files from an external database or process.</inlineHelpText>
        <label>Last Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__MCDD_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCDD Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Source_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Environment where the data was extracted from in the last generation of Data Sets.</inlineHelpText>
        <label>Data Source Environment</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Data Sets</relationshipLabel>
        <relationshipName>Data_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Set</label>
    <listViews>
        <fullName>copado__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Prevent_change_Data_Template</fullName>
        <active>true</active>
        <description>This validation rule prevents the user from changing the Data Template field once the record has been created.</description>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(copado__Data_Template__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Data_Template__c</errorDisplayField>
        <errorMessage>It is not allowed to change the Data Template once the Data Set has been created. Please create a new Data Set.</errorMessage>
    </validationRules>
</CustomObject>